# glowing-chainsaw

./: .gitattributes  .gitignore  LICENSE  README.md
binn/: config.py  main.py  pyproject.toml
binn/data/reactome/: ReactomePathways.txt  ReactomePathwaysRelation.txt  UniProt2Reactome.txt
binn/data/string/: 9606.protein.links.v12.0.txt  uniprotkb.tsv
binn/src/: baselines.py  binn_model.py  biological_mapping.py  cleanup.py  data_acquisition.py  nested_cv.py  network_builder.py  shap_analysis.py  training.py  visualization.py
