[project]
name = "binn"
version = "0.1.0"
description = "Biologically Informed Neural Network pipeline for HPV status prediction"
requires-python = ">=3.13"
dependencies = [
    "GEOparse>=2.0.4",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "torch>=2.10.0",
    "xgboost>=3.2.0",
]

[project.scripts]
binn = "main:main"
